--- a/index.html
+++ b/index.html
@@ -52,24 +52,23 @@
 	
 	<script>function addScript(n){const o=document.createElement("script");o.setAttribute("src",n),document.body.appendChild(o)}window.location.search&&(console.log("redirect"),window.location=window.location.origin+window.location.pathname),document.addEventListener("DOMContentLoaded",()=>{const n=(window.location.pathname.match(/^(\/(?:ipfs|ipns)\/[^/]+)/)||[])[1]||"";if(n){const o=[...document.getElementsByTagName("script")];for(let t=0;t<o.length;t++)if(o[t].src){const e=new URL(o[t].src);console.log("Loading",e.pathname);addScript(window.location.origin+n+e.pathname)}console.log("Finished")}})</script>
 	
-	<title>tornado.pink</title>
+	<title>Tornado.Pink - Tornado.Cash Proxy / Alternate Link</title>
 	<meta data-n-head="1" charset="utf-8">
 	<meta data-n-head="1" http-equiv="Content-Security-Policy" content="img-src 'self' data:;font-src data:;style-src 'self' 'unsafe-inline';connect-src *;script-src 'self' 'unsafe-eval' 'unsafe-inline';default-src 'self';object-src 'none';base-uri 'none';upgrade-insecure-requests;child-src blob:;worker-src blob:;">
 	<meta data-n-head="1" name="Referer-Policy" content="no-referrer">
 	<meta data-n-head="1" name="theme-color" content="#000403">
-	<meta data-n-head="1" data-hid="description" name="description" content="Non-custodial Ethereum Privacy solution.">
-	<meta data-n-head="1" data-hid="og:title" property="og:title" content="tornado.pink">
-	<meta data-n-head="1" data-hid="og:description" property="og:description" content="Non-custodial, trustless, serverless, private transactions on Ethereum network">
+	<meta data-n-head="1" data-hid="description" name="description" content="Tornado.Pink - Tornado.Cash Proxy / Alternate Link - Non-custodial Ethereum Privacy solution.">
+	<meta data-n-head="1" data-hid="og:title" property="og:title" content="Tornado.Pink - Tornado.Cash Proxy / Alternate Link">
+	<meta data-n-head="1" data-hid="og:description" property="og:description" content="Tornado.Pink - Tornado.Cash Proxy / Alternate Link - Non-custodial, trustless, serverless, private transactions on Ethereum network">
 	<meta data-n-head="1" data-hid="og:url" property="og:url" content="https://tornado.pink">
 	<meta data-n-head="1" data-hid="og:type" property="og:type" content="website">
 	<meta data-n-head="1" data-hid="og:image" property="og:image" content="https://tornado.pink/tw.png">
-	<meta data-n-head="1" data-hid="keywords" name="keywords" content="Tornado, Ethereum, ERC20, dapp, smart contract, decentralized, metamask, zksnark, zero knowledge">
-	<link data-n-head="1" rel="manifest" href="/manifest.json">
+	<meta data-n-head="1" data-hid="keywords" name="keywords" content="Tornado Pink, Tornado.Pink, Tornado, Tornado Cash, How to use Tornado Cash, Tornado Cash Alternative, Tornado Cash Proxy, Tornado.Cash, How to use Tornado.Cash, Tornado.Cash Alternative, Tornado.Cash Proxy, Tornado Cash Link, Tornado US Treasury, Tornado US Governement, Eth Mixer, Ethereum Mixer, Ethereum, ERC20, dapp, smart contract, decentralized, metamask, zksnark, zero knowledge">
 	<link data-n-head="1" rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico">
 	<link data-n-head="1" rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
-	<link rel="preload" href="/_nuxt/7feff3e.js" as="script">
-	<link rel="preload" href="/_nuxt/68d7ff0.js" as="script">
-	<link rel="preload" href="/_nuxt/d573b16.js" as="script">
+	<link rel="preload" href="/js/0.js" as="script">
+	<link rel="preload" href="/js/1.js" as="script">
+	<link rel="preload" href="/js/2.js" as="script">
 	
 	<meta data-n-head="1" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></head>
 	
@@ -81,7 +80,7 @@
 	
 	<body>
 		<div id="__wait">
-			<img src="./loader.png">
+			<img src="./loader.png" alt="Tornado.Pink - Tornado.Cash Proxy / Alternate Link">
 		</div>
 		
 		
